--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chris Elles</title>
 </head>
 <body>
+   <a href="about.html"> About</a>
+   <A href="contact.html"> Contact</A>
+   <A href="projects.html"> Projects</A>
     
+
+
 </body>
 </html>
